--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Gateway Colosseum
 subtitle: git gud
 email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: We are under construction, come back soon!
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
