--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # site settings
 title: Gateway Colosseum
 subtitle: git gud
-email: youremailaddress@gmail.com
+email: gatewaycolosseum@gmail.com
 description: We are under construction, come back soon!
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
@@ -21,13 +21,13 @@ tiles-count: 6
 500px_url:
 facebook_url:
 github_url:
-gitlab_url: 
-googleplus_url: 
-instagram_url: 
-linkedin_url: 
+gitlab_url:
+googleplus_url:
+instagram_url:
+linkedin_url:
 pinterest_url:
 slack_url:
-twitter_url: 
+twitter_url:
 # build settings
 markdown: kramdown
 
