--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Gateway Colosseum
 subtitle: git gud
 email: gatewaycolosseum@gmail.com
 description: We are under construction, come back soon!
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
