--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Gateway Colosseum
+title: Gateway Colosseum 'url("../images/logo.png")'
 subtitle: git gud
 email: gatewaycolosseum@gmail.com
 description: We are under construction, come back soon!
